fix header and footer on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -119,7 +119,7 @@ header {
   background-size: cover;
   background-blend-mode: overlay;
   background-color: #111;
-  padding: 2em;
+  padding: 2em 1rem;
   margin: 0;
   border-bottom: 1px solid #555;
   
@@ -137,16 +137,16 @@ header {
 
   h1 {
     width: fit-content;
-    margin: 0;
+    margin: 0.5rem;
   }
 
   nav {
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-wrap: wrap;
     margin-bottom: 0;
 
     a {
-      margin: 1em;
+      margin: 0.5rem;
     }
   }
 }
@@ -163,9 +163,10 @@ footer {
 
   color: var(--color-text);
   padding: 2em;
-  display: grid;
-  grid-template-columns: 1fr max-content;
-  column-gap: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 1em;
   border-top: 1px solid #555;
 
   h2,
@@ -175,7 +176,12 @@ footer {
 
   section {
     display: grid;
-    justify-content: left;
+    justify-content: left bottom;
+    
+    .icon-prefix {
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+    }
   }
 }
 
